--- a/wvdial/wvdial.conf
+++ b/wvdial/wvdial.conf
@@ -55,6 +55,12 @@ APN = mobiledata
 Username = ''
 Password = ''
 
+[Dialer mtx]
+Init2 = AT+CGDCONT=1,"IP","internet"
+APN = internet
+Username = ''
+Password = ''
+
 ########################################
 # for Carrier's in Myanmmer
 #   MCC = 414
