change from gc_modem to gsmmodem to meet usb_modeswitch

--- a/wvdial/wvdial.conf
+++ b/wvdial/wvdial.conf
@@ -18,7 +18,8 @@ Stupid Mode = yes
 Baud = 460800
 New PPPD = yes
 #Modem = /dev/ttyUSB3
-Modem = /dev/gc_modem
+#Modem = /dev/gc_modem
+Modem = /dev/gsmmodem
 ISDN = 0
 APN = soracom.io
 Phone = *99***1#
