--- a/wvdial/wvdial.ini
+++ b/wvdial/wvdial.ini
@@ -1,2 +1,8 @@
-DIALER1=gosim
-DIALER2=
+#DIALER1=TRANSATEL
+DIALER1=mtx
+#DIALER1=gosim
+#DIALER1=soracom
+#DIALER2=ttyUSB0
+#DIALER2=ttyUSB3
+#DIALER2=gsmodem
+DIALER2=gc_modem
