--- a/wvdial/wvdial.conf
+++ b/wvdial/wvdial.conf
@@ -120,6 +120,9 @@ Password = ''
 ########################################
 # for other Devices
 #
+[Dialer gc_modem]
+Modem = /dev/gc_modem
+
 [Dialer ttyUSB0]
 Modem = /dev/ttyUSB0
 
